==> ghent360/Marlin/Marlin/src/HAL/STM32_F4_F7/bsp_sd.cpp <==
#include "../HAL.h"
#include "bsp_sd.h"
#define SD_INSTANCE            SDMMC1
#define SD_CLK_ENABLE          __HAL_RCC_SDMMC1_CLK_ENABLE
#define SD_CLK_DISABLE         __HAL_RCC_SDMMC1_CLK_DISABLE
#define SD_CLK_EDGE            SDMMC_CLOCK_EDGE_RISING
#define SD_CLK_BYPASS          SDMMC_CLOCK_BYPASS_DISABLE
#define SD_CLK_PWR_SAVE        SDMMC_CLOCK_POWER_SAVE_DISABLE
#define SD_BUS_WIDE_1B         SDMMC_BUS_WIDE_1B
#define SD_BUS_WIDE_4B         SDMMC_BUS_WIDE_4B
#define SD_HW_FLOW_CTRL        SDMMC_HARDWARE_FLOW_CONTROL_DISABLE
#define SD_CLK_DIV             1
#define SD_CLK_DIV             SDMMC_TRANSFER_CLK_DIV
#define SD_AF                  GPIO_AF12_SDMMC1
#define SD_INSTANCE            SDIO
#define SD_CLK_ENABLE          __HAL_RCC_SDIO_CLK_ENABLE
#define SD_CLK_DISABLE         __HAL_RCC_SDIO_CLK_DISABLE
#define SD_CLK_EDGE            SDIO_CLOCK_EDGE_RISING
#define SD_CLK_BYPASS          SDIO_CLOCK_BYPASS_DISABLE
#define SD_CLK_PWR_SAVE        SDIO_CLOCK_POWER_SAVE_DISABLE
#define SD_BUS_WIDE_1B         SDIO_BUS_WIDE_1B
#define SD_BUS_WIDE_4B         SDIO_BUS_WIDE_4B
#define SD_HW_FLOW_CTRL        SDIO_HARDWARE_FLOW_CONTROL_DISABLE
#define SD_CLK_DIV             SDIO_TRANSFER_CLK_DIV
#define SD_AF                  GPIO_AF12_SDIO
#define SD_GPIO_SPEED  GPIO_SPEED_FREQ_VERY_HIGH
#define SD_GPIO_SPEED  GPIO_SPEED_FREQ_HIGH
#define SD_OK                         HAL_OK
#define SD_TRANSFER_OK                ((uint8_t)0x00)

uint8_t BSP_SD_IsDetected(void) {
  uint8_t  status = SD_PRESENT;

  /* Check SD card detect pin */
  if (HAL_GPIO_ReadPin(SD_detect_gpio_port, SD_detect_gpio_pin) == GPIO_PIN_SET) {
    status = SD_NOT_PRESENT;
  }

  return status;
}

__weak void BSP_SD_MspInit(SD_HandleTypeDef *hsd, void *Params) {
  UNUSED(hsd);
  UNUSED(Params);
  GPIO_InitTypeDef gpio_init_structure;

  /* Enable SDIO clock */
  SD_CLK_ENABLE();

  /* Enable GPIOs clock */
  __HAL_RCC_GPIOC_CLK_ENABLE();
  __HAL_RCC_GPIOD_CLK_ENABLE();

  /* Common GPIO configuration */
  gpio_init_structure.Mode      = GPIO_MODE_AF_PP;
  gpio_init_structure.Pull      = GPIO_PULLUP;
  gpio_init_structure.Speed     = SD_GPIO_SPEED;
  gpio_init_structure.Alternate = SD_AF;

  /* GPIOC configuration */
  gpio_init_structure.Pin = GPIO_PIN_8 | GPIO_PIN_9 | GPIO_PIN_10 | GPIO_PIN_11 | GPIO_PIN_12;

  HAL_GPIO_Init(GPIOC, &gpio_init_structure);

  /* GPIOD configuration */
  gpio_init_structure.Pin = GPIO_PIN_2;
  HAL_GPIO_Init(GPIOD, &gpio_init_structure);

}

__weak void BSP_SD_Detect_MspInit(SD_HandleTypeDef *hsd, void *Params) {
  UNUSED(hsd);
  UNUSED(Params);
  GPIO_InitTypeDef  gpio_init_structure;

  /* GPIO configuration in input for uSD_Detect signal */
  gpio_init_structure.Pin       = SD_detect_gpio_pin;
  gpio_init_structure.Mode      = GPIO_MODE_INPUT;
  gpio_init_structure.Pull      = GPIO_PULLUP;
  gpio_init_structure.Speed     = SD_GPIO_SPEED;
  HAL_GPIO_Init(SD_detect_gpio_port, &gpio_init_structure);
}
