==> Tjeerdie/sdcard-test/sdcardTest/src/STM32SD/bsp_sd.c <==
#include "bsp_sd.h"
#include "interrupt.h"
#include "PeripheralPins.h"
#include "stm32yyxx_ll_gpio.h"
#define SD_INSTANCE              SDMMC1
#define SD_CLK_ENABLE            __HAL_RCC_SDMMC1_CLK_ENABLE
#define SD_CLK_DISABLE           __HAL_RCC_SDMMC1_CLK_DISABLE
#define SD_CLK2_ENABLE            __HAL_RCC_SDMMC2_CLK_ENABLE
#define SD_CLK2_DISABLE           __HAL_RCC_SDMMC2_CLK_DISABLE
#define SD_CLK_EDGE              SDMMC_CLOCK_EDGE_RISING
#define SD_CLK_BYPASS            SDMMC_CLOCK_BYPASS_DISABLE
#define SD_CLK_PWR_SAVE          SDMMC_CLOCK_POWER_SAVE_DISABLE
#define SD_BUS_WIDE_1B           SDMMC_BUS_WIDE_1B
#define SD_BUS_WIDE_4B           SDMMC_BUS_WIDE_4B
#define SD_BUS_WIDE_8B           SDMMC_BUS_WIDE_8B
#define SD_HW_FLOW_CTRL_ENABLE   SDMMC_HARDWARE_FLOW_CONTROL_ENABLE
#define SD_HW_FLOW_CTRL_DISABLE  SDMMC_HARDWARE_FLOW_CONTROL_DISABLE
#define SD_CLK_DIV               1
#define SD_CLK_DIV               SDMMC_TRANSFER_CLK_DIV
#define SD_TRANSCEIVER_ENABLE    SDMMC_TRANSCEIVER_ENABLE
#define SD_TRANSCEIVER_DISABLE   SDMMC_TRANSCEIVER_DISABLE
#define SD_INSTANCE              SDIO
#define SD_CLK_ENABLE            __HAL_RCC_SDIO_CLK_ENABLE
#define SD_CLK_DISABLE           __HAL_RCC_SDIO_CLK_DISABLE
#define SD_CLK_EDGE              SDIO_CLOCK_EDGE_RISING
#define SD_CLK_BYPASS            SDIO_CLOCK_BYPASS_DISABLE
#define SD_CLK_PWR_SAVE          SDIO_CLOCK_POWER_SAVE_DISABLE
#define SD_BUS_WIDE_1B           SDIO_BUS_WIDE_1B

uint8_t BSP_SD_IsDetected(void)
{
  uint8_t  status = SD_NOT_PRESENT;
  /* Check SD card detect pin */
  if (!LL_GPIO_IsInputPinSet(SD_detect_gpio_port, SD_detect_ll_gpio_pin)) {
    status = SD_PRESENT;
  }
  return status;
}

__weak void BSP_SD_MspInit(SD_HandleTypeDef *hsd, void *Params)
{
  UNUSED(Params);

  /* Configure SD GPIOs */
  const PinMap *map = PinMap_SD;
  while (map->pin != NC) {
    pin_function(map->pin, map->function);
    map++;
  }

  /* Enable SD clock */
#if defined(SDMMC1) && defined(SDMMC2)
  if (hsd->Instance == SDMMC1) {
    SD_CLK_ENABLE();
  } else {
    SD_CLK2_ENABLE();
  }
#else
  UNUSED(hsd);
  SD_CLK_ENABLE();
#endif
}

__weak void BSP_SD_Detect_MspInit(SD_HandleTypeDef *hsd, void *Params)
{
  UNUSED(hsd);
  UNUSED(Params);

  /* GPIO configuration in input for uSD_Detect signal */
#ifdef LL_GPIO_SPEED_FREQ_VERY_HIGH
  LL_GPIO_SetPinSpeed(SD_detect_gpio_port, SD_detect_ll_gpio_pin, LL_GPIO_SPEED_FREQ_VERY_HIGH);
#else
  LL_GPIO_SetPinSpeed(SD_detect_gpio_port, SD_detect_ll_gpio_pin, LL_GPIO_SPEED_FREQ_HIGH);
#endif
  LL_GPIO_SetPinMode(SD_detect_gpio_port, SD_detect_ll_gpio_pin, LL_GPIO_MODE_INPUT);
  LL_GPIO_SetPinPull(SD_detect_gpio_port, SD_detect_ll_gpio_pin, LL_GPIO_PULL_UP);
}
